0.0.4
- ping/pong diagnostics 
- server version
- corpus statistics 


0.0.3
- the license of the corpus included
- client rdoc documentation 
- support for lemmata retrieval 
- excerpt now contains segments instead of strings
- buffer size setter
- default corpus moved to separate plugin (sudo gem install apohllo-poliqarpr-corpus)

0.0.2
- query result is full blown class
- source divided into client, excerpt and query resutl
- specs for client, excerpt and query result
- namespace changed to POLIQARP
- default corpus included
- singular results properly fatched
- valid result for queries containing many words
- same queries which are run in sequence are called only once
- README.txt included in gem
- specs included in gem

0.0.1 
- initiali implementation
- synchorous querying for terms